--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "moment": "^2.29.1",
     "query-string": "^6.13.8",
     "react": "^17.0.1",
+    "react-datepicker": "^3.4.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
